Small fixes during deployment

--- a/wazepl/templates/users/user_detail.html
+++ b/wazepl/templates/users/user_detail.html
@@ -25,7 +25,7 @@
     <a class="btn btn-primary" href="{% url 'users:update' %}">My Info</a>
     <a class="btn btn-primary" href="{% url 'account_email' %}">E-Mail</a>
     <a class="btn btn-info" href="{% url 'avatar_change' %}">Avatar</a>
-    <a class="btn btn-primary" href="http://localhost:8000/accounts/social/connections/">Social accounts</a>
+    <a class="btn btn-primary" href="{% url 'socialaccount_connections' %}">Social accounts</a>
     <!-- Your Stuff: Custom user template urls -->
   </div>
 
